<resources>
    <string name="app_name">Live Backgrounds Wallpaper</string>

    <string name="main_home">Home</string>
    <string name="main_collect">Collect</string>
    <string name="main_setting">Set</string>

    <string name="set_title">Application settings</string>
    <string name="set_score">Rate us</string>
    <string name="set_share">Share us</string>
    <string name="set_shop_link">https://play.google.com/store/apps/details?id=</string>
    <string name="set_rate_us_content">Please share this app and give us 5 stars if this app was helpful to you, thank you!</string>
    <string name="set_cancel">CANCEL</string>
    <string name="set_rate_it">RATE IT</string>
    <string name="set_setting_delete">Clear All My Favorites</string>

    <string name="collect_title">My Collection</string>


    <string name="details_set_wallpaper">Set Wallpaper</string>
    <string name="details_setting_wallpaper">Setting wallpaper ...</string>
    <string name="video_loading">Loading video...</string>


</resources>