<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color_light"
    android:orientation="vertical"
    tools:context=".ui.fragment.SettingFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:text="@string/set_title"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--appLog-->
            <androidx.cardview.widget.CardView
                android:id="@+id/set_image_logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="12dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_launcher" />
            </androidx.cardview.widget.CardView>

            <!--AppName-->
            <TextView
                android:id="@+id/set_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <!--Version-->
            <TextView
                android:id="@+id/set_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:id="@+id/set_layout_rating"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/set_img_google"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="25dp"
                android:padding="2dp"
                android:src="@drawable/svg_rate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/set_score"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:id="@+id/set_layout_share"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/set_img_link"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/svg_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/set_share"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:id="@+id/set_layout_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/set_img_delete"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/svg_delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/set_setting_delete"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>